--- a/views/config.ejs
+++ b/views/config.ejs
@@ -26,10 +26,42 @@
             <div>These Dam Lochs!</div>
             <img src="img/logo.svg">
         </header>
-        <main id="timers" style="display: flex;">
-            <div style="background:white; padding: 1rem;">
-                <input id="shellyIP" type="text" value="<%=shellyIP%>">
-                <button id="setShellyIP">Set IP</button>
+            <main id="timers" style="display: flex;flex-direction: column;">
+                <div style="background:white; padding: 1rem;">
+                    <input id="shellyIP" type="text" value="10.201.0.33">
+                    <button id="setShellyIP">Set IP</button>
+                </div>
+                <div>
+                    <h3>Paste me in reciever!</h3>
+                    <pre style="background:rgb(255, 255, 255);padding: 1rem;border-radius: 5px;text-transform: none;">const MYID = 1;
+
+Shelly.addEventHandler(
+	function (event) {
+		if (
+			typeof event !== 'object' ||
+			event.name !== 'lora' ||
+			!event.info ||
+			!event.info.data
+		) {
+			return;
+		}
+		const message = atob(event.info.data);
+		const object = JSON.parse(message)
+		console.log(message)
+		switch (object.command) {
+			case 'lock':
+				if (object.target == MYID) {
+					Shelly.call("Switch.set", { 'id': 0, 'on': !object.lock });
+				}
+				break;
+			case 'state':
+				if (object.target == MYID) {
+					console.log(Shelly.call("Switch.GetStatus", { 'id': 0 }));
+				}
+				break;
+		}
+	}
+);</pre>
             </div>
         </main>
     </body>
